<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/learn_more"
        android:title="@string/show_learn_more" />
</menu>
