<resources>
    <string name="welcome2_activity_title">Welcome to A11y Ally!</string>
    <string name="welcome2_activity_subtitle">Your one-stop accessibility issue discovery tool.</string>
    <string name="welcome2_activity_main_text">Want to get started checking your app for accessibility issues right now?</string>
    <string name="welcome2_activity_get_started">Yeah!</string>
    <string name="welcome2_activity_learn_more">Not Quite Yet</string>
    <string name="welcome2_activity_pick_subtitle">Pick an app to analyze</string>
    <string name="welcome2_activity_loading">Loading…</string>
    <string name="welcome2_activity_next">Next</string>
    <color name="welcome2_activity_shadow">#000</color>
</resources>
