<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/title_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primary_action_background"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        android:paddingBottom="0px"
        android:layout_gravity="center"
        android:clipToPadding="false"
        android:outlineAmbientShadowColor="@color/welcome2_activity_shadow"
        android:outlineSpotShadowColor="@color/welcome2_activity_shadow"
        android:outlineProvider="bounds"
        android:translationZ="10dp"
        tools:ignore="UnusedAttribute">

        <TextView
            android:id="@+id/welcome_title"
            style="@style/Main.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome2_activity_title" />

        <TextView
            android:id="@+id/welcome_subtitle_pick"
            style="@style/Main.Text.Subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/welcome2_activity_pick_subtitle" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/app_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:choiceMode="multipleChoice"
        tools:listitem="@layout/welcome2_activity_app_entry"
        android:layout_weight="1"
        android:translationZ="-1px" />

    <LinearLayout
        android:id="@+id/bottom_button_wrapper"
        android:background="?attr/standard_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical"
        android:outlineAmbientShadowColor="@color/welcome2_activity_shadow"
        android:outlineSpotShadowColor="@color/welcome2_activity_shadow"
        android:outlineProvider="bounds"
        android:translationZ="10dp"
        android:padding="@dimen/activity_padding"
        tools:ignore="UnusedAttribute">

        <Button
            android:id="@+id/next"
            style="@style/Main.Button.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome2_activity_next" />

    </LinearLayout>
</LinearLayout>
