<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_label">A11y Ally</string>
    <string name="accessibility_service_description">This service allows A11y Ally to scan applications for accessibility issues. Without permission, A11y Ally cannot perform any analysis.</string>
    <string name="permission_manage_recording_description">Allows recording of accessibility issues. Results may potentially include sensitive data.</string>
    <string name="permission_manage_recording_label">Manage A11y Ally Recordings</string>

    <string name="get_started_button">Let\'s get started!</string>
    <string name="learn_more">Learn More</string>
</resources>
